discourse-ui/src/snapshots/discourse_ui__input__tests__print_error.snap
---
source: discourse-ui/src/input.rs
expression: backend

---
┌────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                                                                                    │
│                                                                                                    │
│                                                                                                    │
│                                                                                                    │
│                                                                                                    │
│[38;5;1m✖[39m error text                                                                                        │
│[48;5;7m [49m                                                                                                   │
│                                                                                                    │
│                                                                                                    │
│                                                                                                    │
│                                                                                                    │
│                                                                                                    │
│                                                                                                    │
│                                                                                                    │
│                                                                                                    │
│                                                                                                    │
│                                                                                                    │
│                                                                                                    │
│                                                                                                    │
│                                                                                                    │
└────────────────────────────────────────────────────────────────────────────────────────────────────┘
