discourse-ui/src/snapshots/discourse_ui__input__tests__render.snap
---
source: discourse-ui/src/input.rs
expression: backend

---
┌────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                                                                                    │
│                                                                                                    │
│                                                                                                    │
│                                                                                                    │
│                                                                                                    │
│Line 0                                                                                              │
│Line 1                                                                                              │
│Line 2                                                                                              │
│Line 3                                                                                              │
│Line 4                                                                                              │
│[48;5;7m [49m                                                                                                   │
│                                                                                                    │
│                                                                                                    │
│                                                                                                    │
│                                                                                                    │
│                                                                                                    │
│                                                                                                    │
│                                                                                                    │
│                                                                                                    │
│                                                                                                    │
└────────────────────────────────────────────────────────────────────────────────────────────────────┘
